<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmiheading">Body Mass Index (BMI)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="btn_calculate">Calculate BMI</string>
    <string name="lb">lb</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="hint_height1">Enter Height</string>
    <string name="hint_height2">Enter Height</string>
    <string name="hint_weight">Enter Weight</string>
</resources>
